--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,23 @@
   <meta name="description" content="DirectoryPlus template project" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <!--===============================================================================================-->
+  <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="css/util.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!--===============================================================================================-->
+
 </head>
 
 <body>
@@ -59,6 +76,9 @@
   <script src="plugins/progressbar/progressbar.min.js"></script>
   <script src="plugins/parallax-js-master/parallax.min.js"></script>
   <script src="js/custom.js"></script>
+
+
+
 </body>
 
 </html>
