--- a/client/public/index.html
+++ b/client/public/index.html
@@ -75,7 +75,10 @@
   <script src="plugins/progressbar/progressbar.min.js"></script>
   <script src="plugins/parallax-js-master/parallax.min.js"></script>
   <script src="js/custom.js"></script>
-
+  
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 
 </body>
