--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
   <title>React App</title>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -46,8 +45,7 @@
   <link rel="stylesheet" type="text/css" href="css/util.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <!--===============================================================================================-->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
+
 </head>
 
 <body>
@@ -75,12 +73,9 @@
   <script src="plugins/progressbar/progressbar.min.js"></script>
   <script src="plugins/parallax-js-master/parallax.min.js"></script>
   <script src="js/custom.js"></script>
-  
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 
+  <script src="//code.tidio.co/wcy9bvldbwy429lnnxsilhusvpcmbxvk.js" async></script>
 </body>
 
 </html>
