--- a/client/public/index.html
+++ b/client/public/index.html
@@ -78,7 +78,7 @@
   <script src="js/custom.js"></script>
 
 
-  <!-- <script src="//code.tidio.co/wcy9bvldbwy429lnnxsilhusvpcmbxvk.js" async></script> -->
+  <script src="//code.tidio.co/wcy9bvldbwy429lnnxsilhusvpcmbxvk.js" async></script>
 </body>
 
 </html>
